# smigrate

./: .gitignore  CMakeLists.txt  LICENSE  README
src/: MigrationList.cpp  MigrationList.hpp  MigrationNode.cpp  MigrationNode.hpp  SubCommandHandler.hpp  SubCommandParser.cpp  SubCommandParser.hpp  main.cpp
src/subcmds/: NewHandler.cpp  NewHandler.hpp
